--- a/src/main/resources/FXML/DatBan.fxml
+++ b/src/main/resources/FXML/DatBan.fxml
@@ -300,7 +300,7 @@
 
             <AnchorPane prefHeight="452.0" prefWidth="340.0" VBox.vgrow="ALWAYS">
                 <children>
-                    <Button fx:id="btnWaitlist" layoutX="85.0" layoutY="240.0" prefHeight="45.0" prefWidth="180.0" style="-fx-background-color: #E6763E; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 10;" text="Thêm Vào WaitList" textAlignment="CENTER" visible="false" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="85.0" />
+                    <Button fx:id="btnWaitlist" layoutX="85.0" layoutY="240.0" prefHeight="45.0" prefWidth="180.0" style="-fx-background-color: #E6763E; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 10;" text="Đợi Bàn" textAlignment="CENTER" visible="false" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="85.0" />
                 </children>
             </AnchorPane>
         </VBox>
