--- a/src/main/resources/CSS/dashboard.css
+++ b/src/main/resources/CSS/dashboard.css
@@ -110,7 +110,7 @@
     -fx-background-radius: 18;
     -fx-border-radius: 18;
     -fx-border-width: 1.2;
-    -fx-padding: 10;
+    -fx-padding: 20;
     -fx-spacing: 12;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.08), 8, 0, 3, 3);
     -fx-transition: 0.3s;
@@ -171,17 +171,16 @@
 .countHD{
     -fx-font-size: 15px;
     -fx-font-weight: bold;
-    -fx-text-fill: #2980b9;
 }
-.mauHD1{
+.mau1{
     -fx-text-fill: #ff0000;
 }
 
-.mauHD2{
+.mau2{
     -fx-text-fill: #ffd500;
 }
 
-.mauHD3{
+.mau3{
      -fx-text-fill: #1aff00;
  }
 .vboxHD{
@@ -192,24 +191,22 @@
 .countKV{
     -fx-font-size: 15px;
     -fx-font-weight: bold;
-    -fx-text-fill: #2980b9;
-}
-.mauKV1{
-    -fx-text-fill: #ff0000;
-}
-
-.mauKV2{
-    -fx-text-fill: #ffd500;
-}
-
-.mauKV3{
-    -fx-text-fill: #1aff00;
 }
 .vboxKV{
     -fx-text-alignment: center;
     -fx-alignment: center;
 }
-
+/*DOANH THU*/
+.countDT{
+    -fx-font-size: 25px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ff0000;
+}
+.countKH{
+    -fx-font-size: 25px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #2980b9;
+}
 /*css biểu đồ*/
 .chart_Background {
     -fx-background-color: #ffffff;
