--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -80,24 +80,24 @@
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
                     <AnchorPane prefHeight="66.0" prefWidth="260.0">
                         <children>
-                            <Label layoutX="114.0" layoutY="-14.0" prefHeight="18.0" prefWidth="72.0" styleClass="card-title" text="SỐ ĐƠN" />
-                            <VBox layoutX="70.0" layoutY="20.0" spacing="0" styleClass="vboxHD">
-                                <Label fx:id="lblTongDonDangDoi" styleClass="countHD, mauHD1" text="0" />
-                                <Label fx:id="lblTongDonDaNhan" styleClass="countHD, mauHD2" text="0" />
-                                <Label fx:id="lblTongDonDaThanhToan" styleClass="countHD, mauHD3" text="0" />
+                            <Label layoutX="80.0" layoutY="-14.0" prefHeight="18.0" prefWidth="72.0" styleClass="card-title" text="SỐ ĐƠN" />
+                            <VBox layoutX="35.0" layoutY="20.0" styleClass="vboxHD" >
+                                <Label fx:id="lblTongDonDangDoi" styleClass="countHD, mau1" text="0" />
+                                <Label fx:id="lblTongDonDaNhan" styleClass="countHD, mau2" text="0" />
+                                <Label fx:id="lblTongDonDaThanhToan" styleClass="countHD, mau3" text="0" />
                             </VBox>
                         </children>
                     </AnchorPane>
                 </VBox>
 
-                <VBox alignment="CENTER" maxWidth="250.0" minWidth="150.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
+                <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
                     <AnchorPane prefHeight="66.0" prefWidth="260.0">
                         <children>
-                            <Label layoutX="114.0" layoutY="-14.0" prefHeight="22.0" prefWidth="91.0" styleClass="card-title" text="KHU VỰC" />
-                            <VBox layoutX="70.0" layoutY="20.0" spacing="0" styleClass="vboxKV">
-                                <Label fx:id="lblIn" styleClass="countKV, mauKV1" text="0" />
-                                <Label fx:id="lblOut" styleClass="countKV, mauKV2" text="0" />
-                                <Label fx:id="lblVip" styleClass="countKV, mauKV3" text="0" />
+                            <Label layoutX="80.0" layoutY="-14.0" prefHeight="26.0" prefWidth="85.0" styleClass="card-title" text="KHU VỰC" />
+                            <VBox layoutX="70.0" layoutY="20.0"  styleClass="vboxHD">
+                                <Label fx:id="lblIn" styleClass="countKV, mau1" text="0" />
+                                <Label fx:id="lblOut" styleClass="countKV, mau2" text="0" />
+                                <Label fx:id="lblVip" styleClass="countKV, mau3" text="0" />
                             </VBox>
                         </children>
                     </AnchorPane>
@@ -105,20 +105,24 @@
 
                 <!-- Thẻ 3: DOANH THU -->
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
-                      <Label styleClass="card-title" text="DOANH THU" />
-                    <AnchorPane>
+                    <AnchorPane prefHeight="66.0" prefWidth="260.0">
                         <children>
-                            <Label fx:id="lblDoanhThu" layoutX="30.0" layoutY="45.0" styleClass="money-text" text="0 đ" />
+                            <Label layoutX="60.0" layoutY="-20.0" prefHeight="26.0" prefWidth="120.0" styleClass="card-title" text="DOANH THU" />
+                            <VBox layoutX="40.0" layoutY="20.0"  styleClass="vboxHD">
+                                <Label fx:id="lblDoanhThu" styleClass="countDT" text="0" />
+                            </VBox>
                         </children>
                     </AnchorPane>
                 </VBox>
 
                 <!-- Thẻ 4: TỔNG KHÁCH -->
                 <VBox alignment="CENTER" maxWidth="320.0" minWidth="200.0" prefHeight="155.0" styleClass="stat-card" HBox.hgrow="ALWAYS">
-                      <Label styleClass="card-title" text="TỔNG KHÁCH" />
-                    <AnchorPane>
+                    <AnchorPane prefHeight="66.0" prefWidth="260.0">
                         <children>
-                            <Label fx:id="lblSoKhach" layoutX="75.0" layoutY="45.0" styleClass="count-text" text="0" />
+                            <Label layoutX="75.0" layoutY="-20.0" prefHeight="26.0" prefWidth="120.0" styleClass="card-title" text="SỐ KHÁCH" />
+                            <VBox layoutX="100.0" layoutY="20.0"  styleClass="vboxHD">
+                                <Label fx:id="lblSoKhach" styleClass="countKH" text="0" />
+                            </VBox>
                         </children>
                     </AnchorPane>
                 </VBox>
