--- a/src/main/resources/CSS/thongke.css
+++ b/src/main/resources/CSS/thongke.css
@@ -5,7 +5,7 @@
 .grid-item{
     -fx-background-color: #F1F1F1;
     -fx-background-radius: 0 0 20 20 ;
-    -fx-padding: 6 10;
+    -fx-padding: 2;
 }
 .grid-item-2{
     -fx-background-color: #ffffff;
@@ -158,6 +158,7 @@
     -fx-font-weight: bold;
 }
 
+
 .spacer {
     -fx-pref-width: 26;
     -fx-pref-height: 142;
@@ -175,4 +176,17 @@
     -fx-font-weight: bold;
     -fx-text-fill: #2c7be5;
     -fx-padding: 0 0 10 0;
+}
+
+
+
+.btn-secondary {
+    -fx-background-color: #e0e0e0;
+    -fx-text-fill: #333;
+    -fx-font-weight: bold;
+    -fx-background-radius: 10;
+    -fx-cursor: hand;
+}
+.btn-secondary:hover{
+    -fx-cursor: hand;
 }
