--- a/src/main/resources/FXML/ThongKe.fxml
+++ b/src/main/resources/FXML/ThongKe.fxml
@@ -58,169 +58,8 @@
                             <children>
                                 <ScrollPane prefWidth="0.0" styleClass="center-scroll-pane">
                                     <content>
-                                        <VBox prefHeight="420.0" prefWidth="520.0" spacing="20.0" style="-fx-padding: 10;" styleClass="dish-list">
+                                        <VBox fx:id="vboxDishList" prefHeight="420.0" prefWidth="520.0" spacing="20.0" style="-fx-padding: 10;" styleClass="dish-list">
 
-                                            <!-- 1 -->
-                                            <HBox alignment="CENTER_LEFT" spacing="15" styleClass="dish-row">
-                                                <ImageView fx:id="imgBanhMi" fitHeight="50" fitWidth="70" pickOnBounds="true" preserveRatio="true" styleClass="food-image">
-                                                    <image>
-                                                        <Image url="@../IMG/banhmi.png" />
-                                                    </image>
-                                                    <HBox.margin>
-                                                        <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-                                                    </HBox.margin>
-                                                </ImageView>
-                                                <VBox alignment="CENTER_LEFT" spacing="2">
-                                                    <Label text="Mì Xào Hải Sản" />
-                                                    <Label styleClass="dish-sub" text="Số lượng bán trong tháng: 1000" />
-                                                </VBox>
-                                                <Region HBox.hgrow="ALWAYS" />
-                                                <VBox>
-                                                    <children>
-                                                        <Label styleClass="dish-status-red" text="Cần Nhập Hàng Gấp" />
-                                                    </children>
-                                                </VBox>
-                                                <HBox alignment="CENTER" style="-fx-background-color: #4CAF50; -fx-background-radius: 0 8 8 0;" styleClass="dish-inc">
-                                                    <children>
-                                                        <Label styleClass="dish-row-label" text="↑10%" />
-                                                    </children>
-                                                </HBox>
-                                            </HBox>
-
-                                            <!-- 2 -->
-                                            <HBox alignment="CENTER_LEFT" spacing="15" styleClass="dish-row">
-                                                <ImageView styleClass="food-image">
-                                                    <image>
-                                                        <Image url="@../IMG/banhmi.png" />
-                                                    </image>
-                                                    <HBox.margin>
-                                                        <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-                                                    </HBox.margin>
-                                                </ImageView>
-                                                <VBox alignment="CENTER_LEFT" spacing="2">
-                                                    <Label text="Ốc Hương Trứng Muối" />
-                                                    <Label styleClass="dish-sub" text="Số lượng bán trong tháng: 800" />
-                                                </VBox>
-                                                <Region HBox.hgrow="ALWAYS" />
-                                                <VBox>
-                                                    <children>
-                                                        <Label styleClass="dish-status-orange" text="Cần Nhập Thêm Hàng" />
-                                                    </children>
-                                                </VBox>
-                                                <HBox alignment="CENTER" style="-fx-background-color: #4CAF50; -fx-background-radius: 0 8 8 0;" styleClass="dish-inc">
-                                                    <children>
-                                                        <Label text="↑30%" />
-                                                    </children>
-                                                </HBox>
-                                            </HBox>
-
-                                            <!-- 3 -->
-                                            <HBox alignment="CENTER_LEFT" spacing="15" styleClass="dish-row">
-                                                <ImageView styleClass="food-image">
-                                                    <image>
-                                                        <Image url="@../IMG/banhmi.png" />
-                                                    </image>
-                                                    <HBox.margin>
-                                                        <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-                                                    </HBox.margin>
-                                                </ImageView>
-                                                <VBox alignment="CENTER_LEFT" spacing="2">
-                                                    <Label text="Hàu Mù Tạt" />
-                                                    <Label styleClass="dish-sub" text="Số lượng bán trong tháng: 10" />
-                                                </VBox>
-                                                <Region HBox.hgrow="ALWAYS" />
-                                                <VBox>
-                                                    <children>
-                                                        <Label styleClass="dish-status-yellow" text="Hàng Ít Được Bán" />
-                                                    </children>
-                                                </VBox>
-                                                <HBox alignment="CENTER" style="-fx-background-color: #FF5F57; -fx-background-radius: 0 8 8 0;" styleClass="dish-dec">
-                                                    <children>
-                                                        <Label text="↓40%" />
-                                                    </children>
-                                                </HBox>
-                                            </HBox>
-
-                                            <!-- 4 -->
-                                            <HBox alignment="CENTER_LEFT" spacing="15" styleClass="dish-row">
-                                                <ImageView styleClass="food-image">
-                                                    <image>
-                                                        <Image url="@../IMG/banhmi.png" />
-                                                    </image>
-                                                    <HBox.margin>
-                                                        <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-                                                    </HBox.margin>
-                                                </ImageView>
-                                                <VBox alignment="CENTER_LEFT" spacing="2">
-                                                    <Label text="Cơm Trộn Hàn Quốc" />
-                                                    <Label styleClass="dish-sub" text="Số lượng bán trong tháng: 5" />
-                                                </VBox>
-                                                <Region HBox.hgrow="ALWAYS" />
-                                                <VBox>
-                                                    <children>
-                                                        <Label styleClass="dish-status-brown" text="Cần Có KM hoặc Giảm Giá" />
-                                                    </children>
-                                                </VBox>
-                                                <HBox alignment="CENTER" style="-fx-background-color: #FF5F57; -fx-background-radius: 0 8 8 0;" styleClass="dish-dec">
-                                                    <children>
-                                                        <Label text="↓10%" />
-                                                    </children>
-                                                </HBox>
-                                            </HBox>
-
-                                            <!-- 5 -->
-                                            <HBox alignment="CENTER_LEFT" spacing="15" styleClass="dish-row">
-                                                <ImageView styleClass="food-image">
-                                                    <image>
-                                                        <Image url="@../IMG/banhmi.png" />
-                                                    </image>
-                                                    <HBox.margin>
-                                                        <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-                                                    </HBox.margin>
-                                                </ImageView>
-                                                <VBox alignment="CENTER_LEFT" spacing="2">
-                                                    <Label text="Bánh Mì Thịt Nướng" />
-                                                    <Label styleClass="dish-sub" text="Số lượng bán trong tháng: 1500" />
-                                                </VBox>
-                                                <Region HBox.hgrow="ALWAYS" />
-                                                <VBox>
-                                                    <children>
-                                                        <Label styleClass="dish-status-green" text="Bán Rất Chạy" />
-                                                    </children>
-                                                </VBox>
-                                                <HBox alignment="CENTER" style="-fx-background-color: #4CAF50; -fx-background-radius: 0 8 8 0;" styleClass="dish-inc">
-                                                    <children>
-                                                        <Label text="↑55%" />
-                                                    </children>
-                                                </HBox>
-                                            </HBox>
-
-                                            <!-- 6 -->
-                                            <HBox alignment="CENTER_LEFT" spacing="15" styleClass="dish-row">
-                                                <ImageView styleClass="food-image">
-                                                    <image>
-                                                        <Image url="@../IMG/banhmi.png" />
-                                                    </image>
-                                                    <HBox.margin>
-                                                        <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-                                                    </HBox.margin>
-                                                </ImageView>
-                                                <VBox alignment="CENTER_LEFT" spacing="2">
-                                                    <Label text="Bánh Mì Chả Cá" />
-                                                    <Label styleClass="dish-sub" text="Số lượng bán trong tháng: 950" />
-                                                </VBox>
-                                                <Region HBox.hgrow="ALWAYS" />
-                                                <VBox>
-                                                    <children>
-                                                        <Label styleClass="dish-status-orange" text="Cần Nhập Thêm Hàng" />
-                                                    </children>
-                                                </VBox>
-                                                <HBox alignment="CENTER" style="-fx-background-color: #4CAF50; -fx-background-radius: 0 8 8 0;" styleClass="dish-inc">
-                                                    <children>
-                                                        <Label text="↑20%" />
-                                                    </children>
-                                                </HBox>
-                                            </HBox>
 
                                         </VBox>
 
